add auth_screen && debug_files

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.developerdhairya.tech.cowis">
+    package="tech.developerdhairya.cowis">
    <application
         android:label="cowis"
         android:icon="@mipmap/ic_launcher">
