--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,29 @@ dependencies:
   cupertino_icons: ^1.0.2
   particles_flutter: ^0.1.4
   google_fonts: ^2.1.0
+  firebase_auth: ^3.1.4
+  firebase_core: ^1.8.0
+  google_sign_in: ^5.2.1
+#  flutter_svg: ^0.23.0+1
+  pay: ^1.0.6
+  flutter_dotenv: ^5.0.2
+  cloud_firestore: ^2.5.4
+  auto_size_text: ^3.0.0
+  provider: ^6.0.1
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  accordion: ^2.1.1
+  flutter_launcher_icons: ^0.9.2
+  share: ^2.0.4
+  sendgrid_mailer: ^0.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  image_path: "assets/COWIS-LOGO-MAIN.png"
+  android: true
+  ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -60,9 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
